# OneBase-AI

./: .env.example  .gitignore  README.en.md  README.md  WORKS.md  hooks.py  mkdocs.yml  pyproject.toml  test.md
.github/workflows/: deploy_docs.yml  mirror-to-gitee.yml  publish.yml  test-publish.yml
docs/: CNAME  MODELS.md  getting-started.en.md  getting-started.md  index.en.md  index.md  requirements.txt
docs/about/: LICENSE.en.md  contributing.en.md  contributing.md  release-notes.en.md  release-notes.md
docs/assets/css/: theme.css
docs/assets/js/: sidebar-toggle.js
docs/dev-guide/: api.en.md  api.md  backend.en.md  backend.md  database_design.en.md  database_design.md  frontend.en.md  frontend.md  project_structure.en.md  project_structure.md
docs/user-guide/cli/: args.en.md  args.md  basic.en.md  basic.md
docs/user-guide/config/: MODELS.en.md  MODELS.md  database.en.md  database.md  engine.en.md  engine.md  features.en.md  features.md  knowledge_base.en.md  knowledge_base.md  overview.en.md  overview.md  preset_config.en.md  preset_config.md  security.en.md  security.md
docs/user-guide/deploy/: cloud_deploy.en.md  cloud_deploy.md
onebase/: __init__.py  builder.py  chunker.py  cli.py  config.py  db.py  deps_manager.py  docker_runner.py  factory.py  i18n.py  indexer.py  logger.py  requirements.txt
onebase/locales/: zh.py
templates/backend/: Dockerfile  cache.py  config.py  database.py  deps.py  main.py  ollama-entrypoint.sh  rate_limiter.py  requirements.txt  schemas.py  vllm-entrypoint.sh  xinference-entrypoint.sh
templates/backend/routers/: chat.py  knowledge.py  upload.py
templates/frontend/: index.html  package-lock.json  package.json  vite.config.js
templates/frontend/src/: App.vue
templates/frontend/src/components/: ChatArea.vue  ChatList.vue  FilePreview.vue  Sidebar.vue  TreeNode.vue
templates/frontend/src/composables/: useAuth.js  useChat.js
tests/: conftest.py  test_auth.py  test_builder.py  test_chunker.py  test_config.py  test_factory.py  test_rate_limiter.py  test_routers.py  test_schemas.py
